Changelog
=========


1.0a7-dev
---------

* Support icon expression on folder_factories actions. Using actionicons is deprecated in plone 4
  [13.10.2010, jbaumann]

* Moved test requirements into tests_require, extras_require
  [Thomas Buchberger]


1.0a6
-----
* Do not show contentmenu for anonymous users
  [17.06.2010, fsprenger]

1.0a5
-----


1.0a4
-----


1.0a3
-----


1.0a2
-----


1.0
---

* Enabled contentmenu for dossiers and documents
  [01.12.2009, jbaumann]

* Initial release
