@@ -23,7 +23,7 @@
         title="Combined actions- and workflow-menu"
         class="ftw.contentmenu.menu.CombinedActionsWorkflowMenu"
         />
-        
+
     <browser:menu
         id="plone_contentmenu_factory"
         title="The 'add' menu - allows the user to add new content items in the context"
